2008-08-13 David Anderson <davea42@earthlink.net>
      * dwarfdump.1: When no options (just object files) present
        all sections print, now we say that.  Renamed fields
        in synopsis for readability.
2008-06-23 David Anderson <davea42@earthlink.net>
      * print_reloc.c (print_reloc_information_64): Was testing
        sym_data_entry_count one place where sym_data_64_entry_count
        should have been tested. Thanks to Carlos Alberto Enciso
        for noticing.
2008-06-17 David Anderson <davea42@earthlink.net>
      * print_die.c: Add to dwarf_formstring failure message.
      * README: Correct email: the old sgi.com address is no
        longer correct.
2008-06-13 David Anderson <davea42@earthlink.net>
      * dwconf.c: Fix an off-by-one condition where
        we could index off the end of the cf_regs array in printing
        a register name.
2008-04-12 David Anderson <davea42@earthlink.net>
      * print_reloc.c:  Verify stringtab exists and is
        large enough before indexing into it to get a string
        in printing relocations.
        (Providing default name "<no name>" so it's evident from
        the output that we used a default name string).
2008-04-09 David Anderson <davea42@earthlink.net>
      * print_sections.c (get_fde_proc_name): Initialize some
        local variables at declaration.  The function is very slow
        and needs a replacement.
      * print_die.c:  Fixes a typo in a comment.
      * dwarfdump.c: Added -n option to suppress function name search
        when printing FDEs. Current dwarfdump is n-squared at least
        getting those names, this is a bandage-type-workaround when
        there are so many FDEs the slowness is painful.
      * globals.h: Support for -n option.
      * print_frames.c: Support for -n option.
2008-04-08 David Anderson <davea42@earthlink.net>
      * dwarfdump.c: Added -H option for testing
        (it limits the run length).
        And the support for -H in printing DIEs.