@@ -3,7 +3,7 @@
 # .eh_frame.
 
 # Any number of abi's can be described. Only one can be selected
-# in a given darfdump run (see dwarfdump options)
+# in a given dwarfdump run (see dwarfdump options)
 #  Available commands are
 # beginabi:  <abiname>
 # reg: <regname> <dwarf regnumber>
@@ -402,6 +402,186 @@ reg: pc 23
 
 endabi: m68k
 
+beginabi: ppc
+# This abi defined Oct 2008 based on:
+# http://refspecs.linuxfoundation.org/ELF/ppc64/PPC-elf64abi-1.9.html
+frame_interface: 3
+# abi dwarf table uses up thru 1155.
+# As of Oct 2008, the only ABI requiring a higher
+# DW_FRAME_SAME_VAL and DW_FRAME_CFA_COL3.
+initial_reg_value: 1235  # DW_FRAME_SAME_VAL
+cfa_reg: 1236  # DW_FRAME_CFA_COL3
+reg_table_size: 1200
+reg: r0 0
+reg: f0 32
+reg: f1 33
+reg: f2 34
+reg: f3 35
+reg: f4 36
+reg: f5 37
+reg: f6 38
+reg: f7 39
+reg: f8 40
+reg: f9 41
+reg: f10 42
+reg: f11 43
+reg: f12 44
+reg: f13 45
+reg: f14 46
+reg: f16 47
+reg: f17 48
+reg: f18 49
+reg: f19 50
+reg: f20 51
+reg: f21 52
+reg: f22 53
+reg: f23 54
+reg: f24 55
+reg: f25 56
+reg: f26 57
+reg: f27 58
+reg: f28 59
+reg: f29 60
+reg: f30 62
+reg: f31 63
+reg: cr  64
+reg: fpcsr 65
+# spr0 is also called MQ
+reg: spr0 100
+# spr1 is also called XER
+reg: spr1 101
+# spr4 also called rtcu
+reg: spr4 104
+# spr5 also called rtcl
+reg: spr5 105
+#spr8 also called LR
+reg: spr8 108
+# spr9 also called ctr
+reg: spr9 109
+reg: msr 66
+reg: sr0 70
+reg: sr1 71
+reg: sr2 72
+reg: sr3 73
+reg: sr4 74
+reg: sr5 75
+reg: sr6 76
+reg: sr7 77
+reg: sr8 78
+reg: sr9 79
+
+#dsisr also called spr18
+reg: spr18 118
+# dar also called spr19
+reg: spr19 119
+#dec also called spr22
+reg: spr22  122
+#sdr1 also called spr25
+reg: spr25  125
+#srr0 also called spr26
+reg: spr26  126
+#srr1 also called spr27
+reg: spr27  127
+
+#vrsave also called spr256
+reg: spr256  356
+#sprg0 also called spr272
+reg: spr272  372
+#sprg1 also called spr273
+reg: spr273  373
+#sprg2 also called spr274
+reg: spr274  374
+#sprg3 also called spr275
+reg: spr275  375
+#asr also called spr280
+reg: spr280  380
+#ear also called spr282
+reg: spr282  382
+#tb also called spr284
+reg: spr284  384
+#tbu also called spr285
+reg: spr285  385
+#pvr also called spr287
+reg: spr287  387
+#ibat0u also called spr528
+reg: spr528  628
+#ibat0l also called spr529
+reg: spr529  629
+#ibat1u also called spr530
+reg: spr530  630
+#ibat1l also called spr531
+reg: spr531  631
+#ibat2u also called spr532
+reg: spr532  632
+#ibat2l also called spr533
+reg: spr533  633
+#ibat3u also called spr534
+reg: spr534  634
+#ibat3l also called spr535
+reg: spr535  635
+#dbat0u also called spr536
+reg: spr536  636
+#dbat0l also called spr537
+reg: spr537  637
+#dbat1u also called spr538
+reg: spr538  638
+#dbat1l also called spr539
+reg: spr539  639
+#dbat2u also called spr540
+reg: spr540  640
+#dbat2l also called spr541
+reg: spr541  641
+#dbat3u also called spr542
+reg: spr542  642
+#dbat3l also called spr543
+reg: spr543  643
+
+#hid0 also called spr1008
+reg: spr1008  1108
+#hid1 also called spr1009
+reg: spr1009  1109
+#hid2 also called iabr or spr1010
+reg: spr1010  1110
+#hid5 also called  dabr or spr1013
+reg: spr1013  1113
+#hid15 also called  pir or spr1023
+reg: spr1023  1123
+
+# vector registers 0-31
+reg: vr0  1124
+reg: vr1  1125
+reg: vr2  1126
+reg: vr3  1127
+reg: vr4  1128
+reg: vr5  1129
+reg: vr6  1130
+reg: vr7  1131
+reg: vr8  1132
+reg: vr9  1133
+reg: vr10  1134
+reg: vr11  1135
+reg: vr12  1136
+reg: vr13  1137
+reg: vr14  1138
+reg: vr15  1130
+reg: vr16  1140
+reg: vr17  1141
+reg: vr18  1142
+reg: vr19  1143
+reg: vr20  1144
+reg: vr21  1145
+reg: vr22  1146
+reg: vr23  1147
+reg: vr24  1148
+reg: vr25  1149
+reg: vr26  1150
+reg: vr27  1151
+reg: vr28  1152
+reg: vr29  1153
+reg: vr30  1154
+reg: vr31  1155
+endabi:  ppc
+
 # 'Generic 1000 register abi'.
 # This is useful as a 'general' ABI settings for
 # cpus using up to 1000 registers. The register names
@@ -413,3 +593,5 @@ cfa_reg: 1036  # DW_FRAME_CFA_COL3
 reg_table_size: 1000
 reg: r0 0
 endabi: generic
+
+
