@@ -318,6 +318,6 @@ int dwarf_read_line_table_prefix(Dwarf_Debug dbg,
     struct Line_Table_Prefix_s *prefix_out,
     /* The following 2 arguments are solely for warning users
      * when there is a surprising 'gap' in the .debug_line info. */
-    Dwarf_Small ** wasted_bytes_ptr,
-    Dwarf_Unsigned * wasted_bytes_count,
+    Dwarf_Small ** bogus_bytes_ptr,
+    Dwarf_Unsigned * bogus_bytes_count,
     Dwarf_Error * err);
